--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <img src="./assets/images/Birthday Invite Project.png" height="400" /> <br/>
 
             <a href="./public/about.html">About Me</a> <br/> 
-            <a href="./public/about.html">Contact Me</a>
+            <a href="./public/contact.html">Contact Me</a>
 
         </body>
 </html>
